--- a/jee-main/maths12.html
+++ b/jee-main/maths12.html
@@ -98,29 +98,6 @@
       color: #0d47a1;
       font-weight: bold;
     }
-
-    /* Dark Mode */
-    .dark-mode {
-      background: #121212;
-      color: #f0f0f0;
-    }
-
-    .dark-mode .chapter {
-      background: #1e1e1e;
-      box-shadow: 0 2px 6px rgba(255, 255, 255, 0.05);
-    }
-
-    .dark-mode .progress-bar-container {
-      background: #333;
-    }
-
-    .dark-mode .progress-bar {
-      background: #64b5f6;
-    }
-
-    .dark-mode a {
-      color: #64b5f6;
-    }
   </style>
 </head>
 <body>
@@ -130,8 +107,7 @@
 
   <div class="container">
     <div class="controls">
-      <button onclick="toggleDarkMode()">🌙 Toggle Dark Mode</button>
-      <button onclick="exportProgress()">📋 Export Progress</button>
+      <!-- Removed dark mode toggle and export progress button -->
     </div>
 
     <div class="progress-bar-container">
@@ -322,21 +298,6 @@
       const percent = total > 0 ? Math.round((completed / total) * 100) : 0;
       progressBar.style.width = percent + "%";
       progressBar.textContent = percent + "%";
-    }
-
-    function toggleDarkMode() {
-      document.body.classList.toggle("dark-mode");
-    }
-
-    function exportProgress() {
-      const data = {};
-      Object.keys(localStorage).forEach(key => {
-        if (key.startsWith("maths12-")) {
-          data[key] = localStorage.getItem(key);
-        }
-      });
-      navigator.clipboard.writeText(JSON.stringify(data));
-      alert("Progress copied to clipboard!");
     }
 
     document.addEventListener("DOMContentLoaded", renderSyllabus);
