removed overall progress

--- a/index.html
+++ b/index.html
@@ -111,38 +111,10 @@
 </head>
 <body>
 
-  <h1>📘 JEE Syllabus Tracker</h1>
+  <h1>📘 JEE Syllabus Tracker - TrackVault</h1>
   <h2>Track your progress across all subjects</h2>
 
-  <div class="progress-container">
-    <div class="overall">
-      <strong>📈 Overall Progress</strong>
-      <div class="progress-bar">
-        <div id="overall-progress" class="progress-fill" style="width: 0%">0%</div>
-      </div>
-    </div>
 
-    <div class="physics">
-      <strong>🔬 Physics</strong>
-      <div class="progress-bar">
-        <div id="physics-progress" class="progress-fill" style="width: 0%">0%</div>
-      </div>
-    </div>
-
-    <div class="chemistry">
-      <strong>🧪 Chemistry</strong>
-      <div class="progress-bar">
-        <div id="chemistry-progress" class="progress-fill" style="width: 0%">0%</div>
-      </div>
-    </div>
-
-    <div class="maths">
-      <strong>📐 Mathematics</strong>
-      <div class="progress-bar">
-        <div id="maths-progress" class="progress-fill" style="width: 0%">0%</div>
-      </div>
-    </div>
-  </div>
 
   <div class="subjects-container">
 
