updated the Phy11-12 code for minor storage related bug fixes

--- a/physics11.html
+++ b/physics11.html
@@ -291,7 +291,7 @@
   
         chapter.topics.forEach((topic, topicIndex) => {
           totalTopics++;
-          const topicId = `chapter${chapterIndex}-topic${topicIndex}`;
+          const topicId = `phy11-${chapterIndex}-topic${topicIndex}`;
   
           const label = document.createElement("label");
           const checkbox = document.createElement("input");
