--- a/physics12.html
+++ b/physics12.html
@@ -255,7 +255,7 @@
 
         chapter.topics.forEach((topic, topicIndex) => {
           totalTopics++;
-          const topicId = `chapter${chapterIndex}-topic${topicIndex}`;
+          const topicId = `phy12 -${chapterIndex}-topic${topicIndex}`;
           
           const label = document.createElement("label");
           const checkbox = document.createElement("input");
