Minor Bug fixes

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </head>
 <body>
 
-  <h1>📘 JEE Syllabus Tracker - TrackVault</h1>
+  <h1>📘 JEE Syllabus Tracker - TickVault</h1>
   <h2>Track your progress across all subjects</h2>
 
 
