--- a/home.html
+++ b/home.html
@@ -3,94 +3,154 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TickVault</title>
-  <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#2c3e50">
-  <link rel="apple-touch-icon" href="icons/image.png">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
+  <title>JEE Syllabus Tracker</title>
   <style>
     body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f6fb;
       margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(to right, #f9f9f9, #e6ecf5);
+      padding: 40px 20px;
       color: #2c3e50;
     }
 
-    header {
-      padding: 2rem;
-      text-align: center;
-    }
-
     h1 {
-      font-size: 3rem;
-      margin: 0.5rem 0;
-    }
-
-    p {
-      font-size: 1.2rem;
-      margin-top: 0.2rem;
-      color: #4a4a4a;
-    }
-
-    .hero {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 4rem 2rem;
       text-align: center;
+      font-size: 2.8rem;
+      margin-bottom: 10px;
     }
 
-    .hero img {
-      width: 240px;
-      margin-bottom: 2rem;
+    h2 {
+      text-align: center;
+      color: #666;
+      font-weight: 400;
+      margin-bottom: 40px;
     }
 
-    .cta-button {
-      background-color: #2c3e50;
-      color: white;
-      padding: 16px 32px;
+    .progress-container {
+      max-width: 900px;
+      margin: 0 auto 50px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 4px 18px rgba(0, 0, 0, 0.1);
+    }
+
+    .progress-title {
       font-size: 1.1rem;
-      border: none;
-      border-radius: 12px;
-      text-decoration: none;
+      margin-top: 10px;
       font-weight: 600;
-      transition: background 0.3s ease, transform 0.3s ease;
     }
 
-    .cta-button:hover {
-      background-color: #34495e;
-      transform: scale(1.05);
+    .progress-bar {
+      background-color: #dfe6e9;
+      border-radius: 20px;
+      overflow: hidden;
+      height: 22px;
+      margin-top: 8px;
+      margin-bottom: 20px;
     }
 
-    footer {
-      text-align: center;
-      padding: 2rem;
-      font-size: 0.9rem;
-      color: #777;
+    .progress-fill {
+      height: 100%;
+      text-align: right;
+      padding-right: 10px;
+      line-height: 22px;
+      color: white;
+      font-size: 14px;
+      font-weight: 600;
+      border-radius: 20px;
+      transition: width 0.5s ease;
+    }
+
+    .overall .progress-fill { background: #6c5ce7; }
+    .physics .progress-fill { background: #0984e3; }
+    .chemistry .progress-fill { background: #e17055; }
+    .maths .progress-fill { background: #00b894; }
+
+    .subjects-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+
+    .subject-card {
+      background-color: #ffffff;
+      border-radius: 16px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+      width: 280px;
+      padding: 20px;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    .subject-card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+    }
+
+    .subject-title {
+      font-size: 1.5rem;
+      margin-bottom: 15px;
+      color: #34495e;
+    }
+
+    .link {
+      display: block;
+      text-decoration: none;
+      color: #2980b9;
+      margin: 8px 0;
+      font-weight: 500;
+    }
+
+    .link:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 600px) {
+      .subjects-container {
+        flex-direction: column;
+        align-items: center;
+      }
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>📘 TickVault </h1>
-    <p>Track your JEE syllabus and revision in one clean dashboard.</p>
-  </header>
 
-  <section class="hero">
-    <img src="icons/image.png" alt="App Logo" />
-    <a class="cta-button" href="index.html">Open Dashboard</a>
-  </section>
+  <h1>📘 JEE Syllabus Tracker - TickVault</h1>
+  <h2>Track your progress across all subjects</h2>
 
-  <footer>
-    &copy; 2025 Soaham Chakraborty. Built with ❤️ for self-study warriors.
-  </footer>
+  <!-- Subject Cards -->
+  <div class="subjects-container">
+    <div class="subject-card">
+      <div class="subject-title">Physics</div>
+      <a class="link" href="physics11.html">📗 Class 11</a>
+      <a class="link" href="physics12.html">📘 Class 12</a>
+    </div>
 
-  <script>
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("service-worker.js").then(() => {
-        console.log("Service Worker Registered");
-      });
-    }
-  </script>
+    <div class="subject-card">
+      <div class="subject-title">Chemistry</div>
+      <a class="link" href="chemistry11.html">📗 Class 11</a>
+      <a class="link" href="chemistry12.html">📘 Class 12</a>
+    </div>
+
+    <div class="subject-card">
+      <div class="subject-title">Mathematics</div>
+      <a class="link" href="maths11.html">📗 Class 11</a>
+      <a class="link" href="maths12.html">📘 Class 12</a>
+    </div>
+  </div>
+
+  
 </body>
+
+<footer style="background-color: #f1f1f1; padding: 30px 20px; text-align: center; font-size: 0.95rem; color: #555; border-top: 1px solid #ddd; margin-top: 60px;">
+  <p>© 2025 <strong>Soaham Chakraborty</strong> • Built with ❤️ as a part of <strong>Array</strong>, a project under <strong>MotionLabs</strong>.</p>
+  <p>
+    <a href="contact.html" style="color: #2980b9; text-decoration: none; margin: 0 10px;">Contact Us</a> |
+    <a href="terms.html" style="color: #2980b9; text-decoration: none; margin: 0 10px;">Terms & Conditions</a>
+  </p>
+</footer>
+
 </html>
