bug fixes and the pwa

--- a/physics11.html
+++ b/physics11.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Physics Class 11 Syllabus Tracker</title>
+  <link rel="manifest" href="/manifest.json">
+
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
