--- a/physics12.html
+++ b/physics12.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link rel="manifest" href="/manifest.json">
-
+  <link rel="icon" type="image/png" href="icons/image.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Physics Class 12 Syllabus Tracker</title>
@@ -318,5 +318,19 @@
       // Pass a unique key like "phy12" for Class 12 Physics
       renderSyllabus("phy12", syllabusData);
     </script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+          navigator.serviceWorker.register('/service-worker.js')
+            .then(function(registration) {
+              console.log('Service Worker registered with scope:', registration.scope);
+            })
+            .catch(function(error) {
+              console.log('Service Worker registration failed:', error);
+            });
+        });
+      }
+    </script>
+    
 </body>
 </html>
