--- a/physics11.html
+++ b/physics11.html
@@ -102,183 +102,39 @@
       progressBar.textContent = `${percent}%`;
     }
   
-    // Save the state of checkboxes to localStorage
     function saveProgress() {
       const checkboxes = document.querySelectorAll('input[type="checkbox"]');
       const progress = [...checkboxes].map(cb => cb.checked);
       localStorage.setItem("progress", JSON.stringify(progress));
     }
   
-    // Load the saved progress from localStorage
     function loadProgress() {
       const savedProgress = JSON.parse(localStorage.getItem("progress"));
       if (savedProgress) {
         const checkboxes = document.querySelectorAll('input[type="checkbox"]');
         savedProgress.forEach((checked, index) => {
-          checkboxes[index].checked = checked;
+          if (checkboxes[index]) checkboxes[index].checked = checked;
         });
       }
     }
   
     document.addEventListener("DOMContentLoaded", () => {
       const syllabusData = [
-        {
-          chapter: "1. Physical World",
-          topics: [
-            "What is physics?",
-            "Scope and excitement of physics",
-            "Nature of physical laws",
-            "Physics, technology and society"
-          ]
-        },
-        {
-          chapter: "2. Units and Measurements",
-          topics: [
-            "The international system of units",
-            "Measurement of length, mass and time",
-            "Accuracy, precision of instruments",
-            "Errors in measurement",
-            "Significant figures",
-            "Dimensions of physical quantities",
-            "Dimensional analysis"
-          ]
-        },
-        {
-          chapter: "3. Motion in a Straight Line",
-          topics: [
-            "Position-time graph",
-            "Speed and velocity",
-            "Acceleration",
-            "Kinematic equations",
-            "Uniform and non-uniform motion",
-            "Relative velocity"
-          ]
-        },
-        {
-          chapter: "4. Motion in a Plane",
-          topics: [
-            "Vectors",
-            "Addition and subtraction of vectors",
-            "Projectile motion",
-            "Uniform circular motion"
-          ]
-        },
-        {
-          chapter: "5. Laws of Motion",
-          topics: [
-            "Newton’s laws of motion",
-            "Inertia",
-            "Conservation of momentum",
-            "Equilibrium of a particle",
-            "Friction",
-            "Circular motion dynamics"
-          ]
-        },
-        {
-          chapter: "6. Work, Energy and Power",
-          topics: [
-            "Work done by constant force",
-            "Kinetic energy and work-energy theorem",
-            "Power",
-            "Potential energy",
-            "Conservation of mechanical energy",
-            "Collisions"
-          ]
-        },
-        {
-          chapter: "7. System of Particles and Rotational Motion",
-          topics: [
-            "Centre of mass",
-            "Motion of centre of mass",
-            "Linear momentum",
-            "Torque",
-            "Angular momentum",
-            "Moment of inertia",
-            "Theorems of moment of inertia"
-          ]
-        },
-        {
-          chapter: "8. Gravitation",
-          topics: [
-            "Universal law of gravitation",
-            "Acceleration due to gravity",
-            "Escape velocity",
-            "Satellites",
-            "Kepler's laws"
-          ]
-        },
-        {
-          chapter: "9. Mechanical Properties of Solids",
-          topics: [
-            "Stress and strain",
-            "Hooke’s law",
-            "Young’s modulus",
-            "Bulk modulus",
-            "Shear modulus"
-          ]
-        },
-        {
-          chapter: "10. Mechanical Properties of Fluids",
-          topics: [
-            "Pressure",
-            "Pascal’s law",
-            "Viscosity",
-            "Surface tension",
-            "Bernoulli's theorem"
-          ]
-        },
-        {
-          chapter: "11. Thermal Properties of Matter",
-          topics: [
-            "Heat and temperature",
-            "Thermal expansion",
-            "Calorimetry",
-            "Change of state",
-            "Specific heat",
-            "Heat transfer methods"
-          ]
-        },
-        {
-          chapter: "12. Thermodynamics",
-          topics: [
-            "Zeroth law",
-            "First law of thermodynamics",
-            "Isothermal and adiabatic processes",
-            "Second law of thermodynamics",
-            "Carnot engine"
-          ]
-        },
-        {
-          chapter: "13. Kinetic Theory",
-          topics: [
-            "Kinetic theory of gases",
-            "Pressure of gas",
-            "Equation of state",
-            "RMS speed, degrees of freedom",
-            "Mean free path"
-          ]
-        },
-        {
-          chapter: "14. Oscillations",
-          topics: [
-            "Periodic motion",
-            "Simple harmonic motion",
-            "Energy in SHM",
-            "Damped and forced oscillations",
-            "Resonance"
-          ]
-        },
-        {
-          chapter: "15. Waves",
-          topics: [
-            "Wave motion",
-            "Transverse and longitudinal waves",
-            "Speed of wave motion",
-            "Sound waves",
-            "Beats",
-            "Doppler effect"
-          ]
-        }
+        { chapter: "1. Physical World", topics: ["What is physics?", "Scope and excitement of physics", "Nature of physical laws", "Physics, technology and society"] },
+        { chapter: "2. Units and Measurements", topics: ["The international system of units", "Measurement of length, mass and time", "Accuracy, precision of instruments", "Errors in measurement", "Significant figures", "Dimensions of physical quantities", "Dimensional analysis"] },
+        { chapter: "3. Motion in a Straight Line", topics: ["Position-time graph", "Speed and velocity", "Acceleration", "Kinematic equations", "Uniform and non-uniform motion", "Relative velocity"] },
+        { chapter: "4. Motion in a Plane", topics: ["Vectors", "Addition and subtraction of vectors", "Projectile motion", "Uniform circular motion"] },
+        { chapter: "5. Laws of Motion", topics: ["Newton’s laws of motion", "Inertia", "Conservation of momentum", "Equilibrium of a particle", "Friction", "Circular motion dynamics"] },
+        { chapter: "6. Work, Energy and Power", topics: ["Work done by constant force", "Kinetic energy and work-energy theorem", "Power", "Potential energy", "Conservation of mechanical energy", "Collisions"] },
+        { chapter: "7. System of Particles and Rotational Motion", topics: ["Centre of mass", "Motion of centre of mass", "Linear momentum", "Torque", "Angular momentum", "Moment of inertia", "Theorems of moment of inertia"] },
+        { chapter: "8. Gravitation", topics: ["Universal law of gravitation", "Acceleration due to gravity", "Escape velocity", "Satellites", "Kepler's laws"] },
+        { chapter: "9. Mechanical Properties of Solids", topics: ["Stress and strain", "Hooke’s law", "Young’s modulus", "Bulk modulus", "Shear modulus"] },
+        { chapter: "10. Mechanical Properties of Fluids", topics: ["Pressure", "Pascal’s law", "Viscosity", "Surface tension", "Bernoulli's theorem"] },
+        { chapter: "11. Thermal Properties of Matter", topics: ["Heat and temperature", "Thermal expansion", "Calorimetry", "Change of state", "Specific heat", "Heat transfer methods"] },
+        { chapter: "12. Thermodynamics", topics: ["Zeroth law", "First law of thermodynamics", "Isothermal and adiabatic processes", "Second law of thermodynamics", "Carnot engine"] },
+        { chapter: "13. Kinetic Theory", topics: ["Kinetic theory of gases", "Pressure of gas", "Equation of state", "RMS speed, degrees of freedom", "Mean free path"] },
+        { chapter: "14. Oscillations", topics: ["Periodic motion", "Simple harmonic motion", "Energy in SHM", "Damped and forced oscillations", "Resonance"] },
+        { chapter: "15. Waves", topics: ["Wave motion", "Transverse and longitudinal waves", "Speed of wave motion", "Sound waves", "Beats", "Doppler effect"] }
       ];
   
       const syllabusContainer = document.getElementById("syllabus");
@@ -309,10 +165,8 @@
         syllabusContainer.appendChild(chapterDiv);
       });
   
-      // Load the saved progress from local storage
       loadProgress();
   
-      // Add an event listener to save progress whenever a checkbox is clicked
       const checkboxes = document.querySelectorAll('input[type="checkbox"]');
       checkboxes.forEach(checkbox => {
         checkbox.addEventListener("change", () => {
@@ -320,9 +174,12 @@
           updateDashboard();
         });
       });
-      
+  
+      // ✅ Update the progress bar after everything is loaded
+      updateDashboard();
     });
   </script>
+  
   
   <script>
     if ('serviceWorker' in navigator) {
