--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <img src="icons/image.png" alt="TickVault Logo">
     <p>Track your syllabus. Crush your goals. Stay consistent with TickVault – your academic progress vault.</p>
     <a class="cta-button" href="home.html">Start Tracking Syllabus</a>
-    <a class="cta-button" href="test.html">Start Tracking Test Scores</a>
+    <a class="cta-button" href="https://jee-test-score.vercel.app/">Start Tracking Test Scores</a>
   </section>
 
   <footer>
