--- a/chemistry11.html
+++ b/chemistry11.html
@@ -127,7 +127,9 @@
           "Modern Periodic Law and Periodic Table",
           "Periodic Trends in Properties",
           "Valency, Ionization Enthalpy",
-          "Electronegativity"
+          "Electronegativity",
+          "Nomenclature of Elements",
+          "Atomic and Ionic Radii",
         ]
       },
       {
@@ -158,7 +160,10 @@
           "First Law of Thermodynamics",
           "Internal Energy and Enthalpy",
           "Hess’s Law",
-          "Spontaneity and Gibbs Free Energy"
+          "Second Law of Thermodynamics",
+          "Entropy",
+          "Spontaneity and Gibbs Free Energy",
+          "Third Law of Thermodynamics"
         ]
       },
       {
@@ -169,7 +174,8 @@
           "Le Chatelier’s Principle",
           "Acids, Bases and Salts",
           "pH and Buffer Solutions",
-          "Solubility Product"
+          "Solubility Product",
+          "Factors Affecting Equilibrium"
         ]
       },
       {
@@ -198,7 +204,9 @@
           "Electronic Configuration and Properties",
           "Anomalous Behaviour of Lithium and Beryllium",
           "Important Compounds: NaCl, NaOH, CaO, Ca(OH)₂",
-          "Biological Importance"
+          "Biological Importance",
+          "Alkaline Earth Metals",
+          "Alkali Metals and Their Compounds"
         ]
       },
       {
